--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,21 +5,19 @@ springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/docs/swagger-ui.html
 
-#Conexion PostgreSQL
+# Puerto dinámico para DO
+server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.ewmwtamkxznyapabqlyv
-spring.datasource.password=DASEIN_14
+# Conexión PostgreSQL - Usar variables de entorno en producción
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://aws-1-us-east-2.pooler.supabase.com:5432/postgres}
+spring.datasource.username=${DATABASE_USERNAME:postgres.ewmwtamkxznyapabqlyv}
+spring.datasource.password=${DATABASE_PASSWORD:DASEIN_14}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
+# En producción: false para mejor performance
+spring.jpa.show-sql=${JPA_SHOW_SQL:false}
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
-
-
-
